update method for search pase
